[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "idmtools_platform_slurm"
dynamic = ["version"]
description = "Provides ability to run against Slurm"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "modeling",
    "IDM",
]
authors = [
    { name = "Sharon Chen", email = "schen@idmod.org" },
    { name = "Clinton Collins", email = "ccollins@idmod.org" },
    { name = "Zhaowei Du", email = "zdu@idmod.org" },
    { name = "Clark Kirkman IV", email = "ckirkman@idmod.org" },
    { name = "Benoit Raybaud", email = "braybaud@idmod.org" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "idmtools_platform_general>=0.0.0,<1.0.0",
    "dataclasses-json",
]

[project.urls]
Homepage = "https://github.com/InstituteforDiseaseModeling/idmtools"

[project.optional-dependencies]
test = [
    "idmtools[test]",
    "idmtools_models",
    "idmtools_test",
]

[project.entry-points.idmtools_platform]
idmtools_platform_slurm = "idmtools_platform_slurm.plugin_info:SlurmPlatformSpecification"

[project.entry-points."idmtools_cli.cli_plugins"]
slurm = "idmtools_platform_slurm.cli.slurm:slurm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
idmtools_platform_slurm = [
    "*",
]

[tool.setuptools_scm]
root = ".."                           # keep if your monorepo needs it
version_scheme = "no-guess-dev"       # ← change to this (or "guess-next-dev")
local_scheme = "no-local-version"     # ← change to this (critical for PyPI/TestPyPI uploads)
fallback_version = "0.0.0.dev0"
